package gptui.model.config;

public interface ConfigModel {
    String getProperty(String propertyName);
}
