package gptui.viewmodel.ui;

public interface GptUiVmController {
    void initialize();
}
